2004-10-29 Derek Price <derek@ximbiot.com>

	* filesubr.c (xreadlink): Make sure allocation is tried once at the
	maximum buffer size.  Protect against overflow.
	
2004-10-29 Derek Price <derek@ximbiot.com>

	* server.c (isSameHost): Handle gethostname & gethostbyname errors.

2004-10-29 Derek Price <derek@ximbiot.com>

	* server.c (isSameHost): Use strcasecmp to compare host names.

2004-10-29  Mark D. Baushke  <mdb@cvshome.org>

	* server.c: Need to #include <netdb.h> for either PROXY_SUPPORT or
	HAVE_GSSAPI to get gethostbyname() declarations for

2004-10-29  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (SIZE_MAX, SSIZE_MAX): Use #include "xsize.h" instead.
	(xreadlink): Use xrealloc instead of xmalloc/free.
	
2004-10-29  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (SIZE_MAX, SSIZE_MAX): New constants.
	(xreadlink): Deal with symlinks longer than 127 bytes.
	(Problem reported as issue 190 by Gottfried Ganssauge
	<gotti@cvshome.org>.)

2004-10-29 Derek Price <derek@ximbiot.com>

	* server.c (isSameHost): New fuction.
	(same_path): Rename to...
	(isSamePath): ...this.
	(isProxyServer): Use new functions/names.

2004-10-29  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (writeproxy): Use DOTSTAR to avoid problems with
	a missing Gssapi-authenticate in Valid-requests.

2004-10-28 Derek Price <derek@ximbiot.com>

	* server.c (same_path): New function.
	(isProxyServer): Use new function.
	* sanity.sh (writeproxy): Test that server resolves symlinks when
	deciding whether it is a primary server.

2004-10-28 Derek Price <derek@ximbiot.com>

	* cvs.h (isdir, isfile, islink, isdevice, isreadable, iswritable,
	isaccessible, isabsolute): Return boolean rather than int.
	* filesubr.c (isdir, isfile, islink, isdevice, isreadable, iswritable,
	isaccessible), subr.c (isabsolute): Ditto.  Some reformatting.
	* filesubr.c (xresolvepath): Use save_cwd in place of xgetwd.  Some
	reformatting.
	
2004-10-28 Derek Price <derek@ximbiot.com>
