@@ -769,124 +769,6 @@ rewind_buf_from_net (void)
 
 
 
-#if 0
-/* Relocate the bytes from SRC to the end of the file FD to DEST.  If
- * DEST < SRC, truncate the file.
- *
- * Resets the file position to EOF when done.
- */
-void
-move_file_offset (int fd, off_t src, off_t dest)
-{
-    off_t end;
-    off_t p, q;
-    char buf[4096];
-#if defined (F_GETFL) && defined (O_NONBLOCK) && defined (F_SETFL)
-    int flags;
-
-    /* Save current blocking status and set file descriptor to block.  */
-    flags = fcntl (fd, F_GETFL, 0);
-    if (flags < 0) error (1, errno, "Failed to retrieve FD flags");
-    if (fcntl (fd, F_SETFL, flags & ~O_NONBLOCK) < 0)
-	error (1, errno, "Failed to set FD flags.");
-#endif /* F_GETFL && O_NONBLOCK && F_SETFL */
-
-    /* Make sure all data written to this file has been committed to disk
-     * before mucking around with it.
-     */
-    if (fsync (fd) < 0)
-	error (1, 0, "Failed to sync file data before moving");
-
-    /* Find EOF.  */
-    end = lseek (fd, 0, SEEK_END);
-    if (end < 0) error (1, errno, "Failed to find end of file");
-
-    /* Move the data.  */
-    if (src < dest)
-    {
-	q = end;
-	while (q != src)
-	{
-	    size_t len;
-
-	    p = lseek (fd, q - 4096 <= src ? src : q - 4096, SEEK_SET);
-	    if (p < 0)
-		error (1, errno, "Failed to set file position for read");
-	    /* Preserve len when we reset p.  */
-	    len = q - p;
-	    if (read (fd, buf, len) < 0)
-		error (1, errno, "Failed to read from file");
-	    p = lseek (fd, q - 4096 <= src ? dest : q - 4096 + dest - src,
-	               SEEK_SET);
-	    if (p < 0)
-		error (1, errno, "Failed to set file position for write 1");
-	    if (write (fd, buf, len) < 0)
-		error (1, errno, "Failed to write to file");
-	    q -= len;
-	}
-	if (lseek (fd, 0, SEEK_END) < 0)
-	    error (1, errno, "Failed to set file position to EOF");
-    }
-    else /* src > dest */
-    {
-	q = src;
-	while (q != end)
-	{
-	    size_t len;
-
-	    q = lseek (fd, q, SEEK_SET);
-	    if (q < 0)
-		error (1, errno, "Failed to set file position for read");
-	    p = q + 4096 > end ? end : q + 4096;
-	    /* Preserve len when we reset p.  */
-	    len = p - q;
-	    if (read (fd, buf, len) < 0)
-		error (1, errno, "Failed to read from file");
-	    p = lseek (fd, q - src + dest, SEEK_SET);
-	    if (p < 0)
-		error (1, errno, "Failed to set file position for write 2");
-	    if (write (fd, buf, len) < 0)
-		error (1, errno, "Failed to write to file");
-	    q += len;
-	}
-	if (ftruncate (fd, end - src + dest) < 0)
-	    error (1, errno, "Failed to truncate file");
-    }
-
-    /* Restore blocking status.  */
-#if defined (F_GETFL) && defined (O_NONBLOCK) && defined (F_SETFL)
-    if (fcntl (fd, F_SETFL, flags) < 0)
-	error (1, errno, "Failed to restore FD flags.");
-#endif /* F_GETFL && O_NONBLOCK && F_SETFL */
-}
-
-
-
-/*
- * Replace RLEN bytes at OFFSET in FD open for read/write with the LEN bytes
- * found at BUF.
- *
- * Resets the file position to EOF when done.
- *
- * ERRORS
- *   Are fatal.
- */
-static void
-replace_file_offset (int fd, off_t offset, size_t rlen, void *buf, size_t len)
-{
-    move_file_offset (fd, offset + rlen, offset + len);
-    if (!len) return;
-    if (lseek (fd, offset, SEEK_SET) < 0)
-	error (1, errno, "Failed to set file position for replace write");
-    if (write (fd, buf, len) < 0)
-	error (1, errno, "Failed to write to file");
-    if (lseek (fd, 0, SEEK_END) < 0)
-	error (1, errno, "Failed to set file position to EOF after replace");
-}
-#endif /* 0 */
-
-
-
 /*
  * This request cannot be ignored by a potential secondary since it is used to
  * determine if we _are_ a secondary.
@@ -961,25 +843,7 @@ E Protocol error: Root says \"%s\" but pserver says \"%s\"",
     /* At this point we have enough information to determine if we are a
      * secondary server or not.
      */
-    if (isProxyServer ())
-    {
-/* I'm going to need the following for translation once the trunk gets
- * merged and Root translation becomes necessary again.
- */
-# if 0
-	/* Replace the `Root' request in the log with a request for our
-	 * primary.
-	 */
-	len = 5 + strlen (config->PrimaryServer->directory);
-	buf = xmalloc (len + 1);
-	sprintf (buf, "Root %s", config->PrimaryServer->directory);
-	replace_file_offset (log_buffer_get_log_fd (proxy_log),
-	                     buf_from_net->last_index,
-	                     buf_from_net->last_count,
-	                     buf, len);
-# endif
-    }
-    else if (proxy_log)
+    if (proxy_log && !isProxyServer ())
     {
 	/* Else we are not a secondary server.  There is no point in
 	 * reprocessing since we handle all the requests we can receive
